ch5 finished, started ch 6

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -44,3 +44,8 @@
 \newacronym{MAPE}{MAPE}{Mean Absolute Percentage Error}
 \newacronym{MSE}{MSE}{Mean Squared Error}
 \newacronym{RMSE}{RMSE}{Root Mean Squared Error}
+\newacronym{AFIT}{AFIT}{Air Force Institute of Technology}
+\newacronym{CSUCI}{CSUCI}{California State University - Channel Islands}
+\newacronym{CSU}{CSU}{Colarado State University}
+\newacronym{RAL}{RAL}{Rutherford Appleton Laboratory}
+\newacronym{DAQ}{DAQ}{Data Acquisition System}
