--- a/chap2.tex
+++ b/chap2.tex
@@ -36,9 +36,7 @@ In this section, the quasineutrality and collective behavior of plasmas will be 
 %Can derive e field from boltzmann relation as E = kb T / e (del ne) / ne
 
 \subsection{Gaussian Laser}
-In order to heat up a material with a laser efficiently, the energy would ideally be concentrated to a small point. For example, the typical incandescent household light bulb radiates energy equally in all directions and does not do a good job of focusing energy to a point. But, using a magnifying glass can effectively concentrate the energy. For this reason, focusing optics play an important part in the field of plasma physics. 
-
-However, to obtain a focused light source, we can use lasers that have the capability of producing narrow beams. The intended output of many lasers have an electric field described by the fundamental transverse electromagnetic mode \cite{Zangwill_2012} (TEM$_{00}$) described by the following electric field
+In order to heat up a material with a laser efficiently, the energy would ideally be concentrated to a small point. Lasers are a coherent source of light that can be focused to narrow beams. The intended output of many lasers have an electric field described by the fundamental transverse electromagnetic mode \cite{Zangwill_2012} (TEM$_{00}$) described by the following electric field
 
 \begin{equation}
 	E(r, x) = E_0 \hat{y} \frac{w_0}{w(x)} \exp( - \frac{r^2}{w(x)^2}) \cos(k x - \arctan(x/x_R) + \frac{k r^2}{2 R(x)}) \label{eq:gaussian_beam}
@@ -225,7 +223,7 @@ On the other hand, when $\omega > \omega_p$, $l_s^2$ is positive and the solutio
 \begin{equation}
 	E(x) = E(0) \exp(-x / l_s)
 \end{equation}
-where $l_s \equiv c / \omega_p$ is defined as the \emph{skin depth}. This ``evanescent'' behavior when $\omega > \omega_p$ occurs because the electrons cannot respond fast enough to the higher frequency $\omega$. Since the field cannot propagate effectively for $x > 0$, the plasma ends up reflecting a significant portion of the light. Since wavelength (and frequency) is fixed from the laser, we can reformulate this finding in terms of electron density. The critical density $n_c$ is defined as the electron density where $\omega = \omega_{p,e}$. Using \cref{eq:omegape}, this can be expressed as
+This ``evanescent'' behavior when $\omega > \omega_p$ occurs because the electrons cannot respond fast enough to the higher frequency $\omega$. Since the field cannot propagate effectively for $x > 0$, the plasma ends up reflecting a significant portion of the light. Since wavelength (and frequency) is fixed from the laser, we can reformulate this finding in terms of electron density. The critical density $n_c$ is defined as the electron density where $\omega = \omega_{p,e}$. Using \cref{eq:omegape}, this can be expressed as
 
 \begin{equation}
 	n_c \equiv \frac{m \epsilon_0}{e^2} \omega^2 \label{eq:criticaldensity}
@@ -265,9 +263,9 @@ As mentioned, the optimal angle would appear to be for grazing incidence ($\thet
 \subsubsection{Other Mechanisms}
 When the laser field penetrates a distance $l_s \approx c / \omega_p$ into the overdense region of the target, the electrons can heat up through collisions at an absorption rate $\eta \propto \frac{\nu_{ei}}{\omega_p,i}$ \cite{Gibbon_2005_Plasma} where $\nu_{ei}$ is the electron-ion collision frequency. This type of absorption is called the \emph{skin effect}. In this case, we see Fresnel-like reflection and absorption (see \cite{Griffiths_2017}) that is effective for large incidence angles. Even when the collision frequency is low, we can still get efficient absorption as long as the thermal electron motions are large compared to the skin depth (i.e. $v_{th}/\omega > l_s$) \cite{Gibbon_2005_Plasma}. This phenomena is called the \emph{anomalous skin effect} that is also most effective at large incidence angles. 
 
-All of the mentioned phenomena work best at oblique incidence in p-polarization. But, for relativistic intensities, additional heating mechanisms arise. When $a_0 \gtrapprox 1$, the magnetic portion of \cref{eq:lorentz} becomes significant. At normal incidence, the electric and magnetic field components both fall in the $y-z$ plane. The electric fields move the electrons strongly causing a current $\vec{J}$ which in turn will interact with the laser magnetic field $\vec{B}$ in the direction perpendicular to both. As a result, this type of heating is known as $\vec{J} \times \vec{B}$ heating \cite{Gibbon_2005_Plasma,Kruer_1985_PoF}. Because $\vec{J} \times \vec{B}$ is in the direction of propagation, this effect is most pronounced at normal incidence. (TALK ABOUT HOW CIRCULAR POLARIZATION NEGATES JXB HEATING)
+All of the mentioned phenomena work best at oblique incidence in p-polarization. But, for relativistic intensities, additional heating mechanisms arise. When $a_0 \gtrapprox 1$, the magnetic portion of \cref{eq:lorentz} becomes significant. At normal incidence, the electric and magnetic field components both fall in the $y-z$ plane. The electric fields move the electrons strongly causing a current $\vec{J}$ which in turn will interact with the laser magnetic field $\vec{B}$ in the direction perpendicular to both. As a result, this type of heating is known as $\vec{J} \times \vec{B}$ heating \cite{Gibbon_2005_Plasma,Kruer_1985_PoF}. Because $\vec{J} \times \vec{B}$ is in the direction of propagation, this effect is most pronounced at normal incidence. (CAN Maybe talk about how circular polarization mitigates JxB heating)
 
-At even higher intensities, the laser can directly impart energy to the electrons through radiation pressure \cite{Macchi_2013_RevModPhys} because photons themselves carry momentum. These mechanisms are explored further in \cref{sec:acceleration}. In reality, all experiments involve a combination of several different electron heating mechanisms. Consequently, many experiments and simulations have been devoted to parametric studies that show how parameters ($L_p$, $\theta_i$, polarization, $a_0$, etc.) affect electron absorption(CITATION NEEDED)
+At even higher intensities, the laser can directly impart energy to the electrons through radiation pressure \cite{Macchi_2013_RevModPhys} because photons themselves carry momentum. These mechanisms are explored further in \cref{sec:acceleration}. In reality, all experiments involve a combination of several different electron heating mechanisms. Consequently, many experiments and simulations have been devoted to parametric studies that show how parameters ($L_p$, $\theta_i$, polarization, $a_0$, etc.) affect electron absorption (CITATIONs needed)
 
 \section{Ion Acceleration} \label{sec:acceleration}
 
@@ -281,7 +279,7 @@ where $I_{18}$ is the peak intensity of the laser pulse in $\SI{1e18}{\watt \per
 \begin{equation}
 	k_B T_h = m c^2 (\gamma - 1) \label{eq:wilks}
 \end{equation}
-In \cref{fig:electron_scaling}, we can see that the \emph{Wilks scaling} (pink) closely matches ultra-intense laser experiments. The other scalings in the figure are similarly validated by computational simulations and are all proportional to $(I \lambda^2)^\alpha$, where $0 < \alpha \leq 1$. As a result, the product $I \lambda^2$ is an important quantity in laser-plasma experiments and is called the \emph{irradiance}. Wilks also outlines a way to measure the hot electron temperature in his simulations \cite{Wilks_1992_PRL} by taking the slope of $\frac{dN_e}{dE}$ in the $MeV$ regime and is something I do in (CITE DUB PULSE SIM FIGUR HOT ELECTRON)
+In \cref{fig:electron_scaling}, we can see that the \emph{Wilks scaling} (pink) closely matches ultra-intense laser experiments. The other scalings in the figure are similarly validated by computational simulations and are all proportional to $(I \lambda^2)^\alpha$, where $0 < \alpha \leq 1$. As a result, the product $I \lambda^2$ is an important quantity in laser-plasma experiments and is called the \emph{irradiance}. Wilks also outlines a way to measure the hot electron temperature in his simulations \cite{Wilks_1992_PRL} by taking the slope of $\frac{dN_e}{dE}$ in the $MeV$ regime and is something I do in (MAYBE REFERENCE FIGURE FROM CH4 of HOT ELECTRON SPECTRA)
 
 \begin{figure}
 	\centering 
@@ -290,7 +288,7 @@ In \cref{fig:electron_scaling}, we can see that the \emph{Wilks scaling} (pink) 
 	\label{fig:electron_scaling}
 \end{figure}
 
-Since protons are 1836 times as massive as electrons, they are much harder to accelerate and on the scale of femtosecond pulse interactions, they are essentially immobile. (CITATION) Despite this, ultra-intense laser experiments have demonstrated proton acceleration is possible. This section will explain the \gls{TNSA} mechanism for accelerating protons and light ions which is heavily dependent on $T_h$. Then, we will discuss alternative acceleration mechanisms. Finally, we'll overview some important applications.
+Since protons are 1836 times as massive as electrons, they are much harder to accelerate and on the scale of femtosecond pulse interactions, they are essentially immobile. Despite this, ultra-intense laser experiments have demonstrated proton acceleration is possible. This section will explain the \gls{TNSA} mechanism for accelerating protons and light ions which is heavily dependent on $T_h$. Then, we will discuss alternative acceleration mechanisms. Finally, we'll overview some important applications.
 
 \subsection{Target Normal Sheath Acceleration}
 The observation of energetic protons off the rear side of thin plastic and gold targets has been documented throughout a variety of experiments since the 80s \cite{Tan_1984_PoF}. It might sound unintuitive that we would even see protons in the first place; after all, when shooting a target like aluminum, one would expect aluminum ions. It turns out that there is always an important and measurable surface contamination layer, primarily composed of hydrogen and light hydrocarbons \cite{Gitomer_1986_PoF}. Allen \cite{Allen_2004_PRL} showed that when removing the surface contaminant from the backside, we see a strong suppression in ion acceleration. This points to the contaminant layer being the crux of what is accelerated.
