--- a/desai.bib
+++ b/desai.bib
@@ -1,12 +1,33 @@
-@misc{Desai_2024_CPP,
-	title={Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data}, 
-	author={Ronak Desai and Thomas Zhang and Ricky Oropeza and John J. Felice and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
-	year={2023},
-	eprint={2307.16036},
-	archivePrefix={arXiv},
-	primaryClass={physics.plasm-ph},
+@article{Desai_2024_CPP,
+	author={John J. Felice and Ronak Desai and Nathaniel Tamminga and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
+	title={Towards Automated Learning with Ultra-Intense Laser Systems\\Operating in the kHz Repetition Rate Regime}, 
+	year = {2024},
+	journal = {Contributions to Plasma Physics},
+	pages = {e202400080},
+	keywords = {laser-driven ion acceleration, machine learning, normal sheath acceleration, optimization, target},
+	doi = {https://doi.org/10.1002/ctpp.202400080},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ctpp.202400080},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ctpp.202400080}
+}
+
+@misc{Desai_2025_APL,
+	title={Towards Automated Learning with Ultra-Intense Laser Systems\\Operating in the kHz Repetition Rate Regime}, 
+	author={John J. Felice and Ronak Desai and Nathaniel Tamminga and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
+	journal = {APL Machine Learning},
+	year={2025},
 	doi = {10.48550/arXiv.2307.16036},
 	url = {https://doi.org/10.48550/arXiv.2307.16036}
+}
+
+@misc{Desai_2025_Zenodo,
+	author       = {Desai, Ronak and
+	Felice, John J.},
+	title        = {Datasets and code from ``Towards Automated Learning with Ultra-Intense Laser Systems Operating in the kHz Repetition Rate Regime''},
+	month        = oct,
+	year         = 2024,
+	publisher    = {Zenodo},
+	doi          = {10.5281/zenodo.14009491},
+	url          = {https://doi.org/10.5281/zenodo.14009491}
 }
 
 @misc{Desai_2024_Zenodo,
@@ -22,16 +43,6 @@
 	howpublished = {\url{https://doi.org/10.5281/zenodo.12752264}}
 }
 
-@misc{Desai_2024_arX,
-	title={Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data}, 
-	author={Ronak Desai and Thomas Zhang and Ricky Oropeza and John J. Felice and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
-	year={2023},
-	eprint={2307.16036},
-	archivePrefix={arXiv},
-	primaryClass={physics.plasm-ph},
-	doi = {10.48550/arXiv.2307.16036},
-	url = {https://doi.org/10.48550/arXiv.2307.16036}
-}
 
 @phdthesis{Smith_2020_Thesis,
 	title={Advanced Simulations and Optimization of Intense Laser Interactions},
