--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,16 @@
 	pages={1–50}
 }
 
+@misc{Feister_2019_arXiv,
+	title={Development Considerations for High-Repetition-Rate HEDP Experiments}, 
+	author={Scott Feister and Patrick L. Poole and Peter V. Heuer},
+	year={2019},
+	eprint={1906.11777},
+	archivePrefix={arXiv},
+	primaryClass={physics.plasm-ph},
+	url={https://arxiv.org/abs/1906.11777}, 
+}
+
 @article{Passoni_2019_SciRep,
 	Author = {Passoni, M. and Fedeli, L. and Mirani, F.},
 	Title = {Superintense Laser-driven Ion Beam Analysis},
