--- a/template.tex
+++ b/template.tex
@@ -116,7 +116,7 @@
 
 %\include{acronyms} %load list of acronyms contained in acronyms.tex
 \include{template-abstract}
-\dedication{To you, my love.} % Optional, and seriously not this lame
+\dedication{Dedicate to ...} % Optional, and seriously not this lame
 \include{template-ack}
 \include{template-vita}
 \tableofcontents 
