ch6 exp updates

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -49,3 +49,4 @@
 \newacronym{CSU}{CSU}{Colarado State University}
 \newacronym{RAL}{RAL}{Rutherford Appleton Laboratory}
 \newacronym{DAQ}{DAQ}{Data Acquisition System}
+\newacronym{OAP}{OAP}{off-axis parabolic mirror}
