--- a/target.bib
+++ b/target.bib
@@ -18,6 +18,15 @@
 	pages={e50}
 }
 
+@article{Snyder_2020_SciRep,
+	title={Background pressure effects on MeV protons accelerated via relativistically intense laser-plasma interactions}, 
+	volume={10}, 
+	DOI={10.1038/s41598-020-75061-1}, 
+	journal={Scientific Reports}, 
+	author={Snyder, J. and Morrison, J. T. and Feister, S. and Frische, K. D. and  George, K. M. and Le, M. and Orban, C. and Ngirmang, G. and Chowdhury, E. and Roquemore, W.},
+	year={2020}
+}
+
 @article{Feister_2023_HPLSE, 
 	title={Control systems and data management for high-power laser facilities}, 
 	volume={11}, 
